[package]
name = "grav1synth"
version = "0.1.0-beta.5"
edition = "2021"
rust-version = "1.59.0"
license = "MIT"
repository = "https://github.com/rust-av/grav1synth"
description = "Grain Synth analyzer and editor for AV1 files"
keywords = ["video", "multimedia", "av1"]
categories = ["multimedia", "multimedia::video", "multimedia::encoding"]
exclude = ["/dav1d-test-data", "/tests"]

[dependencies]
anyhow = "1.0.55"
arrayvec = "0.7.2"
av1-grain = "0.2.2"
bit = "0.1.1"
bitvec = "1.0.1"
clap = { version = "4.0.2", features = ["derive"] }
crossterm = "0.25.0"
dialoguer = "0.10.1"
ffmpeg = { version = "5.1.1", default-features = false, features = [
    "format",
], package = "ffmpeg-next" }
indicatif = "0.17.1"
log = "0.4.17"
nom = "7.1.0"
num-rational = "0.4.1"
num-traits = "0.2.15"
num_enum = "0.5.7"
pretty_env_logger = "0.4.0"
video-resize = "0.1.0"

[dev-dependencies]
interpolate_name = "0.2.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.3.0"

[features]
default = []
ffmpeg_static = ["ffmpeg/static", "ffmpeg/build"]
unstable = ["av1-grain/unstable"]

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
