[package]
name = "grav1synth"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rust-av/grav1synth"
description = "Grain Synth analyzer and editor for AV1 files"
keywords = ["video", "multimedia", "av1"]
categories = ["multimedia", "multimedia::video", "multimedia::encoding"]
exclude = ["/dav1d-test-data", "/tests"]

[dependencies]
anyhow = "1.0.55"
arrayvec = "0.7.2"
av1-grain = "0.4.2"
bit = "0.1.1"
bitvec = "1.0.1"
clap = { version = "4.0.2", features = ["derive"] }
crossterm = "0.29.0"
dialoguer = "0.12.0"
ffmpeg = { version = "5.0.0", default-features = false, features = [
    "format",
], package = "ffmpeg-the-third" }
indicatif = "0.18"
log = "0.4.17"
nom = "8.0.0"
num-rational = "0.4.1"
num-traits = "0.2.15"
num_enum = "0.7"
pretty_env_logger = "0.5.0"
v_frame = "0.5.1"
video-resize = "0.2.0"

[dev-dependencies]
interpolate_name = "0.2.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.3.0"

[features]
default = []
ffmpeg_static = ["ffmpeg/static", "ffmpeg/build"]
unstable = ["av1-grain/unstable"]
dav1d_tests = []

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

[profile.relwithdebug]
inherits = "release"
debug = "full"

[lints.clippy]
cargo = { level = "warn" }
# Pedantic
case_sensitive_file_extension_comparisons = "warn"
format_collect = "warn"
format_push_string = "warn"
ignore_without_reason = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
manual_assert = "warn"
# Clippy says this was added in 1.93 but that appears to be incorrect.
# manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
maybe_infinite_iter = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_pass_by_value = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
stable_sort_primitive = "warn"
transmute_ptr_to_ptr = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_wraps = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
verbose_bit_mask = "warn"
